# arduino-beginner

./: .editorconfig  .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  Makefile  README.rst  lint-c.sh  lint-svg.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml  lint.yml
code/project-01/src/: main.cpp
code/project-03/: LICENSE
code/project-03/src/: main.cpp
code/project-04/include/: README
code/project-04/src/: main.cpp
docs/: Makefile  conf.py  index.rst  license.rst  parts.rst  requirements.txt
git-hooks/: commit-msg.sh
project-01/: platformio.ini
project-01/src/: main.cpp
project-02/src/: main.cpp
project-03/src/: main.cpp
project-04/lib/: README
project-05/src/: main.cpp
