[tool.poetry]
name = "Beginning Arduino with PlatformIO"
version = "0.1.0"
description = "A guide to starting Arduino with the PlatformIO IDE"
authors = ["Seth Fischer <seth@fischer.nz>"]
license = "CC BY-SA 4.0"

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.0.2"
sphinxcontrib-svg2pdfconverter = "^1.1.1"
sphinx-rtd-theme = "^0.5.2"

[tool.poetry.dev-dependencies]
platformio = "^5.1.1"
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.8.0"
rstcheck = "^3.3.1"
commitizen = "^2.17.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
