[tool.poetry]
name = "Beginning Arduino with PlatformIO"
version = "0.1.0"
description = "A guide to starting Arduino with the PlatformIO IDE"
authors = ["Seth Fischer <seth@fischer.nz>"]
license = "CC BY-SA 4.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-svg2pdfconverter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
commitizen = "^2.37.1"
flake8 = "^6.0.0"
isort = "^5.10.1"
platformio = "^6.1.5"
rstcheck = "^6.1.1"
scour = "^0.38.2"

[tool.commitizen]
version = "0.1.0"
version_files = [
    "docs/conf.py:version",
    "pyproject.toml"
]

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
